Restructure all JVM study docs to mind-map interview format
전체 44개 파일(00-overview ~ 12-tradeoff)을 면접 마인드맵 구조로 통일.
각 문서는 루트 한 문장 → 3~6개 가지 → 가지별 키워드 3개 → 면접
워크플로우 → 꼬리질문 트리 → 학습 체크리스트 순으로 재배치.

stack-pc-native 파일에는 추가로 RSS/footprint 정의, bytecode-Frame
관계(배우-대본-작업장 모델), PC Register vs Return PC, NIO/colored
function, Carrier thread, Stack chunk freeze 메커니즘, Pinning
원리, ReentrantLock 해결 메커니즘 보충 박스 통합.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>